# ----------------------------------------------------------------------------------------
# Copyright © 2016 LeLe570929726. All rights reserved.
#
# @Project: HetGui
# @License: Licensed under GNU General Public License v3.
# @Craete: 2016/9/3 by LeLe570929726
# ----------------------------------------------------------------------------------------

add_subdirectory("${PROJECT_SOURCE_DIR}/Src/Code/Core")
